<resources>
    <string name="app_name">All About Me</string>
    <string name="about_me">About Me</string>
    <string name="bio_about_me">\tA Dedicated and Motivated Engineering Graduate. To Leverage engineer knowledge, Open Source enthusiast , Geeky and a Quick Learner of new technologies, Where I can apply my knowledge and skills for continuous improvement.</string>
    <string name="qualifications">qualifications</string>
    <string name="college">College :</string>
    <string name="experience">Experience</string>
    <string name="area_of_interest">Area Of Interest</string>>
    <string name="career_portfolio">Career Portfolio</string>
    <string name="user_name">\@ppranesh5</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="coffee">Coffee</string>
    <string name="license">License</string>
    <string name="author">Author</string>
    <string name="my_name">Pranesh Palanisamy</string>
    <string name="location">Coimbatore, India</string>
    <string name="download_source_code">Download Source Code</string>
    <string name="company">Company</string>
    <string name="i_m_ready_to_get_hired">I\'m Ready to get Hired</string>
    <string name="fav_position">Mobile App Developer(Android, IOS)</string>
    <string name="ready_to_explore">Ready to Explore</string>
    <string name="_21_yrs_old">21 yrs old</string>
    <string name="domainie">UI/UX Designer</string>
    <string name="click_to_know">Click to Know</string>
    <string name="sslc">SSLC :</string>
    <string name="school">SRSI Matric Hr Sec School</string>
    <string name="sslc_percentage">Percentage: 90.60%</string>
    <string name="hsc">HSC :</string>
    <string name="hsc_percentage">Percentage: 86.06%</string>
    <string name="ug">B.E :</string>
    <string name="ug_college">Sri Krishna College of Engineering and Technology</string>
    <string name="ug_percentage">CGPA: 7.70</string>
    <string name="nextpage">nextPage</string>
    <string name="internship">Internship :</string>
    <string name="internship_company">* Connected Ventures Technology *</string>
    <string name="my_interest">Turned My Interest towards "Android".</string>
    <string name="contributions1">Android, Web Applications, Git, GitHub..</string>
    <string name="contributions2">Getting into Open Source Contributions made me to gain Knowledge.</string>
    <string name="contributions3">GitHub is one of the best VCS I have ever experienced.</string>
    <string name="data_structures">Data Structures</string>
    <string name="algorithms">Algorithms</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="android_development">Android Development</string>
    <string name="web_development">Web Development</string>
    <string name="ui_designing">UI - Designing</string>
    <string name="skills">Skills</string>
    <string name="android">Android</string>
    <string name="coding">Coding</string>
    <string name="personal_skills">Personal Skills</string>
    <string name="creativity">Creativity</string>
    <string name="flexibility">Flexibility</string>
    <string name="designing">Designing</string>
    <string name="communication">Communication</string>
    <string name="organisation">Organisation</string>
    <string name="star">star</string>
    <string name="dashboard">DashBoard</string>
    <string name="education">Education</string>
    <string name="contributions">Contributions</string>
    <string name="skillset">Skill Set</string>
    <string name="areaofinterest">Area Of Interest</string>
    <string name="about">About</string>
    <string name="ppranesh5_gmail_com">ppranesh5@gmail.com</string>
    <string name="Open">Open</string>
    <string name="close">Close</string>
    <string name="developer">Developer</string>
</resources>
