<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LowLightBrownColor"
    android:orientation="vertical"
    tools:context=".about">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.v7.widget.CardView
                android:id="@+id/AboutCardView_App"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/WhiteColor"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_boss"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.041"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="Tw Cen MT"
                        android:gravity="center"
                        android:text="@string/career_portfolio"
                        android:textColor="@color/BlackColor"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout_version"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="48dp"
                        android:fontFamily="Tw Cen MT"
                        android:gravity="start"
                        android:text="@string/user_name"
                        android:textColor="@color/BlurGreyColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:id="@+id/linearLayout_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="47dp"
                                android:background="@color/WhiteColor"
                                android:src="@drawable/z_round_info" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="31dp"
                                    android:fontFamily="Tw Cen MT"
                                    android:text="@string/version"
                                    android:textColor="@color/BlackColor"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="31dp"
                                    android:fontFamily="Tw Cen MT"
                                    android:text="@string/version_number"
                                    android:textColor="@color/BlurGreyColor"
                                    android:textSize="13sp" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout_coffee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_version">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_breakfast" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="fill"
                            android:layout_marginStart="30dp"
                            android:fontFamily="Tw Cen MT"
                            android:text="@string/coffee"
                            android:textColor="@color/BlackColor"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_license"
                        android:layout_width="373dp"
                        android:layout_height="26dp"
                        android:layout_marginTop="14dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_coffee">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_round_android" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:fontFamily="Tw Cen MT"
                            android:text="@string/license"
                            android:textColor="@color/BlackColor"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/AboutCardView_Author"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/WhiteColor"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="Tw Cen MT"
                        android:text="@string/author"
                        android:textColor="@color/BlackColor"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout_author_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:layout_editor_absoluteX="8dp">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_round_person" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="31dp"
                                android:fontFamily="Tw Cen MT"
                                android:text="@string/my_name"
                                android:textColor="@color/BlackColor"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="31dp"
                                android:fontFamily="Tw Cen MT"
                                android:text="@string/location"
                                android:textColor="@color/BlurGreyColor"
                                android:textSize="13sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_author_name">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_round_download" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:fontFamily="Tw Cen MT"
                            android:text="@string/download_source_code"
                            android:textColor="@color/BlackColor"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/AboutCardView_Company"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/WhiteColor"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="Tw Cen MT"
                        android:text="@string/company"
                        android:textColor="@color/BlackColor"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:layout_constraintTop_toBottomOf="@+id/textViewCompany"
                        tools:layout_editor_absoluteX="8dp">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_round_location_city" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="31dp"
                                android:fontFamily="Tw Cen MT"
                                android:text="@string/i_m_ready_to_get_hired"
                                android:textColor="@color/BlackColor"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="31dp"
                                android:fontFamily="Tw Cen MT"
                                android:text="@string/fav_position"
                                android:textColor="@color/BlurGreyColor"
                                android:textSize="13sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_locate_me"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:layout_marginTop="14dp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout_position">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginStart="47dp"
                            android:src="@drawable/z_round_location" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:fontFamily="Tw Cen MT"
                            android:text="@string/ready_to_explore"
                            android:textColor="@color/BlackColor"
                            android:textSize="18sp" />


                    </LinearLayout>


                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>


    </ScrollView>





</RelativeLayout>